--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
             POSTGRES_USER: user
             POSTGRES_PASSWORD: password
             POSTGRES_DB: db
+    frontend:
+        image: pawel-jadach/cra-app
+        ports:
+            - "3001:3001"
